# opengles3-book

./: CMakeLists.txt  实现目标.xlsx
Common/Include/: config.h
Common/Source/: esShapes.c  log.h  obj_loader.h
UserClipPlane/: CMakeLists.txt  UserClipPlane.c
gold_skin/: CMakeLists.txt  FragmentShader.fs  Hello_Triangle.fs  VertexShader.vs  gold_skin.c
opengls_book_console/: CMakeLists.txt  Hello_Triangle.c  Hello_Triangle.vs  cube.c  log.c  obj_loader.c  opengls_book_console.cpp
test_code/: Hello_Triangle.c  Instances.c  Instancing.c  MRT.c  MipMap2D.c  MultiTexture.c  Simple_Texture2D  Simple_TextureCubemap.c  Simple_VertexShader.c  VertexArrayObject.c  VertexBufferObjects.c
